<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Q10">

    <TextView
        android:id="@+id/questionNo10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:text="@string/q10"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home10" />

    <TextView
        android:id="@+id/question10"
        android:layout_width="379dp"
        android:layout_height="103dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="22dp"
        android:text="@string/Q10"
        android:textColor="#121111"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionNo10" />

    <Button
        android:id="@+id/strAgree_button10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/strAgree"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/question10"
        tools:layout_editor_absoluteX="161dp" />

    <Button
        android:id="@+id/agree_button10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/agree"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/strAgree_button10"
        tools:layout_editor_absoluteX="161dp" />

    <Button
        android:id="@+id/neutral_button10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/neutral"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/agree_button10"
        tools:layout_editor_absoluteX="161dp" />

    <Button
        android:id="@+id/dislike_button10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/disagree"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/neutral_button10"
        tools:layout_editor_absoluteX="161dp" />

    <Button
        android:id="@+id/strDislike_button10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/strDisagree"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/dislike_button10"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/home10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/home"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/prev_button10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/prev"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/strDislike_button10" />

    <Button
        android:id="@+id/next_button10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:text="@string/next"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/strDislike_button10" />


</androidx.constraintlayout.widget.ConstraintLayout>